re PR tree-optimization/22525 (tree based value profiling (-fprofile-use) produces mismatch types in conditional)

2006-04-24  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/22525
	* value-prof.c (tree_mod_pow2): Remove unnecessary temporary
	variable, adjust types of generated expressions.

From-SVN: r113216